force-app/main/default/objects/PhonePersonRelationship__c/PhonePersonRelationship__c.object-meta.xml
<CustomObject>
    <label>Phone Person Relationship</label>
    <nameField>
        <displayFormat>P2P-{000000}</displayFormat>
        <label>Phone Person Relationship</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Phone Person Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>