force-app/main/default/objects/PhonePersonRelationship__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Phone2ContactRelationship</relationshipName>
    <type>Lookup</type>
</CustomField>