force-app/main/default/objects/PhonePersonRelationship__c/fields/Lead_Or_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Lead_Or_Contact_Id__c</fullName>
    <formula>if(NOT(ISBLANK(Contact__c)),Contact__c,  Lead__c )</formula>
    <label>Lead Or Contact Id</label>
    <type>Text</type>
</CustomField>