force-app/main/default/objects/PhonePersonRelationship__c/fields/Phonenumber__c.field-meta.xml
<CustomField>
    <fullName>Phonenumber__c</fullName>
    <label>Phonenumber</label>
    <referenceTo>PhoneNumber__c</referenceTo>
    <relationshipName>Phonenumbers2Individuals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>