force-app/main/default/objects/PhonePersonRelationship__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Lead_Or_Contact_Id__c</columns>
    <columns>Lead__c</columns>
    <columns>Contact__c</columns>
    <columns>Phonenumber__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>